# Projeto-Estrutura-Dados-Miguel

./: CMakeLists.txt  Relatório-Projeto-Estrutura_de_dados.docx
results/: benchmark.csv  benchmark.html
src/: AVL.c  AVL.h  alloc.c  alloc.h  benchmark.c  benchmark.h  dict.h  hashtable.c  hashtable.h  linkedlist.c  linkedlist.h  loader.c  loader.h  main.c  menu.c  menu.h  operations.c  operations.h  radix.c  radix.h  skiplist.c  skiplist.h  timer.c  timer.h  title.h  trie.c  trie.h
